--- a/index.html
+++ b/index.html
@@ -1,37 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Condensed:300,400">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <link rel="stylesheet" href="./styles.css">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Condensed:300,400">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css">
+    <title>Document</title>
 </head>
+
 <body ng-app="app">
+    <h2 class="text-center">Contact App</h2>
+    <div ng-controller="ContactCtrl as ctrl" class="main-content">
+        <div class="container">
+            <h4>Add new contact</h4>
+            <div class="addContactForm col-xs-8 col-xs-offset-2">
+                <form class="form-group" ng-submit="ctrl.add(ctrl.newContact)">
+                    <label for="first-name">First Name</label>
+                    <input type="text" id="first-name" class="form-control" ng-model="ctrl.newContact.firstName">
 
-<div ng-controller="ConatctCtrl as ctrl" class="main-content">
-  <div class="contactForm">
+                    <label for="last-name">Last Name</label>
+                    <input type="text" id="last-name" class="form-control" ng-model="ctrl.newContact.lastName">
 
-  </div>
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" class="form-control" ng-model="ctrl.newContact.phone">
 
-  <div class="contactList">
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" class="form-control" ng-model="ctrl.newContact.email">
 
-  </div>
-</div>
+                    <label for="bday">Birthday</label>
+                    <input type="date" id="bday" class="form-control" ng-model="ctrl.newContact.bday">
+
+                    <button type="submit" class="btn btn-primary">Add new contact </button>
+                </form>
+            </div>
+        </div>
+
+        <div class="contactList">
+
+        </div>
+    </div>
 
 
 
-  <!-- Load Angular -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
-  <!-- Load Firebase -->
-  <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
-  <!-- Load AngularFire -->
-  <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
-  <!-- Load our app -->
-  <script src="./app.js"></script>
+    <!-- Load Angular -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.1/angular.min.js"></script>
+    <!-- Load Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
+    <!-- Load AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+    <!-- Load our app -->
+    <script src="app.js"></script>
 </body>
+
 </html>
